--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am learning to be a developer/p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>North Carolina</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Golf Video Games</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Food Critic</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Charlotte</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Enjoy learning new skills</p>
     </section>
 
     <footer id="footer">
